# PolkaComputeLab

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  architecture.md  build.sh  resources.md  rust-toolchain.toml  test.sh  whitepaper.md
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  ocw.rs  rpc.rs  service.rs
pallets/consensus-manager/: Cargo.toml
pallets/consensus-manager/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/event-hub/: Cargo.toml
pallets/event-hub/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/job-registry/: Cargo.toml
pallets/job-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/job-verifier/: Cargo.toml
pallets/job-verifier/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/telemetry/: Cargo.toml
pallets/telemetry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
